# envdiff

./: .gitignore  README.md  pyproject.toml
envdiff/: __init__.py  annotator.py  archiver.py  auditor.py  baseline.py  classifier.py  cli.py  cli_archiver.py  cli_auditor.py  cli_baseline.py  cli_comparator.py  cli_comparator_chain.py  cli_differ_stats.py  cli_duplicates.py  cli_grouper.py  cli_lint.py  cli_matrix.py  cli_patch.py  cli_pinner.py  cli_profile.py  cli_pruner.py  cli_rename.py  cli_score.py  cli_scorer_matrix.py  cli_snapshot.py  cli_statistics.py  cli_stripper.py  cli_tagger.py  cli_tracker.py  cli_transform.py  cli_watch.py  compactor.py  comparator.py  comparator_chain.py  deduplicator.py  differ.py  differ_matrix.py  differ_stats.py  duplicates.py  exporter.py  (+31 more)
tests/: test_annotator.py  test_archiver.py  test_auditor.py  test_auditor_integration.py  test_baseline.py  test_baseline_integration.py  test_classifier.py  test_cli.py  test_cli_archiver.py  test_cli_auditor.py  test_cli_baseline.py  test_cli_grouper.py  test_cli_matrix.py  test_cli_rename.py  test_cli_snapshot.py  test_cli_stripper.py  test_cli_transform.py  test_compactor.py  test_comparator.py  test_comparator_chain.py  test_deduplicator.py  test_differ.py  test_differ_matrix.py  test_differ_matrix_integration.py  test_differ_stats.py  test_duplicates.py  test_exporter.py  test_filter.py  test_grouper.py  test_interpolator.py  test_linter.py  test_merger.py  test_normalizer.py  test_parser.py  test_patcher.py  test_pinner.py  test_planner.py  test_profiler.py  test_pruner.py  test_redactor.py  (+19 more)
