[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "envdiff"
version = "0.1.0"
description = "Diff .env files across environments and flag missing or mismatched keys."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
envdiff = "envdiff.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["envdiff*"]
