[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "envdiff"
version = "0.1.0"
description = "Diff .env files across environments and flag missing or mismatched keys."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.urls]
"Homepage" = "https://github.com/example/envdiff"
"Bug Tracker" = "https://github.com/example/envdiff/issues"

[project.scripts]
envdiff = "envdiff.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["envdiff*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
